[package]
name = "kanwar_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1"}
pest = {version = "2.0"}
pest_derive = {version = "2.0"}

[dev-dependencies]
reqwest = {version = "0.11"}
tokio = {version = "1", features= ["full"]}